@@ -70,6 +70,8 @@ CLEANUP:
 
 
 DONE:
+9/8/08 - add englishUnits arg to constructors for coordinates feature
+9/8/08 - simplify i18n for units, to accommodate switching between English and metric
 ******* 1.00.02 (24258)
 9/8/08 - bugfix: snowfall gradient doesn't draw properly and crashes on Mac OS 10.4 (see Unfuddle #553)
 9/8/08 - update snowfall shape based on bounds of both birds-eye and zoomed viewports, so that sky doesn't above snow in zoomed view on large monitors
